[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/menulabel.tres" type="DynamicFont" id=1]
[ext_resource path="res://gui/button.gd" type="Script" id=2]

[node name="button" type="TextureButton"]
margin_left = 234.0
margin_right = 669.0
margin_bottom = 51.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="RichTextLabel" parent="."]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]menu button[/center]"
text = "menu button"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="." to="." method="_on_button_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_button_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_button_mouse_entered"]
